kustomize/base/fastapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fastapi
  name: fastapi
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  strategy: {}
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - image: vikinghacker/fastapi_app:latest
          name: fastapi
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
      restartPolicy: Always
status: {}
