kustomize/base/fastapi-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fastapi
  name: fastapi
  namespace: default
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    app: fastapi
status:
  loadBalancer: {}
