kustomize/base/ingress-fastapi.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fastapi
  namespace: default
  generation: 2
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - hackerblog.cloudns.ph
      secretName: fastapi-secret
  rules:
  - host: hackerblog.cloudns.ph 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 5000
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 5000
      - path: /users/count
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 5000
